7atet el select image from camera and gallery

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="tab3">Messages</string>
     <string name="tab4">Notifications</string>
 
+    <string name="facebook_app_id">343432232758439</string>
 </resources>
