--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="string_reselect">Click on Image to Reselect</string>
     <string name="title_activity_chat">ChatActivity</string>
     <string name="title_activity_add_cause">AddCauseActivity</string>
+    <string name="title_activity_edit_cause">EditCauseActivity</string>
 </resources>
